--- a/templates/index.html
+++ b/templates/index.html
@@ -54,7 +54,8 @@ Device Modeling Works
 <!-- /.intro-header -->
 
 <!-- Page Content -->
-<div class="container" style="height: 160px; overflow: auto">
+<!--<div class="container" style="height: 160px; overflow: auto">-->
+<div class="container">
     <h5><a href="/update_history" target="_blank">Update History</a></h5>
 
     {% include 'updateHisCore.html' %}
