--- a/templates/pyrfs/toc.html
+++ b/templates/pyrfs/toc.html
@@ -20,6 +20,7 @@
         <li><a href="/pyrfs/chap2.b2">6. gm Table | Sort Vbs</a></li>
         <li><a href="/pyrfs/chap2.b3">7. gm Table | Vbs label</a></li>
         <li><a href="/pyrfs/chap2.b4">8. Idsat Table | merge W L</a></li>
+        <li><a href="/pyrfs/chap2.b5">9. Sid/Id^2 | Formula</a></li>
 
     </ul>
 
