--- a/templates/updateHisCore.html
+++ b/templates/updateHisCore.html
@@ -1,4 +1,40 @@
 <table width="100%">
+    <tr>
+        <td width="15%">2017.08.24</td>
+        <td>Add a PyRFS Example: <a href="/pyrfs/chap2.b5" target="_blank">Sid/Id^2 | Formula</a>
+
+        </td>
+    </tr>
+    <tr>
+        <td width="15%">2017.08.22</td>
+        <td>Add a MBP FAQ: <a href="/mbpfaq/errorDataGrid" target="_blank">Display Vth, Idsat RMS on W/L/T/Vdd Grid</a>
+
+        </td>
+    </tr>
+
+    <tr>
+        <td width="15%">2017.08.14</td>
+        <td>Add a MBP FAQ: <a href="/mbpfaq/vthscaling4sides" target="_blank">Vth Scaling Plots of 4 Sides on W/L
+            Matrix</a>
+
+        </td>
+    </tr>
+
+    <tr>
+        <td width="15%">2017.08.13</td>
+        <td>Add a MBP FAQ: <a href="/mbpfaq/addFlow2Menu" target="_blank">Display Customized Flow in MBP main GUI</a>
+
+        </td>
+    </tr>
+
+    <tr>
+        <td width="15%">2017.08.12</td>
+        <td>Add a MBP FAQ: <a href="/mbpfaq/changeDefaultScript" target="_blank">Change BSIMCMG / BSIMIMG Model's
+            Default Script Settings</a>
+
+        </td>
+    </tr>
+
 
     <tr>
         <td width="15%">2017.08.12</td>
@@ -9,7 +45,8 @@
 
     <tr>
         <td width="15%">2017.08.11</td>
-        <td>Add a MQA FAQ: <a href="/mqafaq/TightLoopWithMeasData" target="_blank">Use Synchronized Instance Param Values from Meas for Simulation</a>
+        <td>Add a MQA FAQ: <a href="/mqafaq/TightLoopWithMeasData" target="_blank">Use Synchronized Instance Param
+            Values from Meas for Simulation</a>
 
         </td>
     </tr>
