--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -47,7 +47,10 @@
 
 
 
+
+
     </script>
+
 </head>
 
 <body>
@@ -148,7 +151,7 @@
 
 <!-- Bootstrap Core JavaScript -->
 <script src="/static/js/bootstrap.min.js"></script>
-
+ {% block script %}{% endblock %}
 
 </body>
 
