--- a/templates/mqarules/toc.html
+++ b/templates/mqarules/toc.html
@@ -13,6 +13,7 @@
     <h5><a href="/mqarules/symm">Symmetry Check up to 3rd-order Derivative</a></h5>
     <h5><a href="/mqarules/misR">Mismatch R | Hspice</a></h5>
     <h5><a href="/mqarules/wpe">WPE Rule</a></h5>
+    <h5><a href="/mqarules/fn_spe_finfet">1/f Noise | FinFET | Spectre</a></h5>
 
     <br/><br/><br/><br/><br/>
 
