--- a/templates/pyrfs/toc.html
+++ b/templates/pyrfs/toc.html
@@ -19,8 +19,9 @@
         <li><a href="/pyrfs/chap2.b1">5. gm Table | T=25</a></li>
         <li><a href="/pyrfs/chap2.b2">6. gm Table | Sort Vbs</a></li>
         <li><a href="/pyrfs/chap2.b3">7. gm Table | Vbs label</a></li>
-        <li><a href="/pyrfs/chap2.b4">8. Idsat Table | merge W L</a></li>
+        <li><a href="/pyrfs/chap2.b4">8. dsat Table | merge W L</a></li>
         <li><a href="/pyrfs/chap2.b5">9. Sid/Id^2 | Formula</a></li>
+        <li><a href="/pyrfs/chap2.b6">10. Update Excel Template</a></li>
 
     </ul>
 
