--- a/templates/requestlogin.html
+++ b/templates/requestlogin.html
@@ -11,10 +11,10 @@ Request Login
 
     <br/><br/>
 
-    <h3>Request a login</h3>
+    <h3>Request a login or forget password</h3>
     <hr/>
     The logins are created for licensed Keysight users only, please contact your local Keysight representative for a
-    login, thank you.
+    login, as well as for retrieving the password.
 
     <br/><br/>
 
