--- a/templates/updateHisCore.html
+++ b/templates/updateHisCore.html
@@ -1,5 +1,46 @@
 <table width="100%">
     <tr>
+        <td width="15%">2017.09.07</td>
+        <td>Enable Search Options, user can <font style="color:#8B0000">search by application category.</font>
+        </td>
+    </tr>
+    <tr>
+        <td width="15%">2017.09.05</td>
+        <td>Add a MQA Rule: <a href="/mqarules/fn_spe_finfet" target="_blank">1/f Noise Rule Example | FinFET |
+            Spectre</a>
+
+        </td>
+    </tr>
+    <tr>
+        <td width="15%">2017.09.01</td>
+        <td>Add a MBP FAQ: <a href="/mbpfaq/script_subckt_param" target="_blank">Access Subckt Model Parameters in
+            Script</a>
+
+        </td>
+    </tr>
+    <tr>
+        <td width="15%">2017.08.25</td>
+        <td>Add a MBP FAQ: <a href="/mbpfaq/script_import_export" target="_blank">Partially Import/Export Script
+            Settings </a>
+
+        </td>
+    </tr>
+
+    <tr>
+        <td width="15%">2017.08.25</td>
+        <td>Add a PyRFS Example: <a href="/pyrfs/chap2.b6" target="_blank">Sid/Id^2 | Update Existing Excel Template</a>
+
+        </td>
+    </tr>
+    <tr>
+        <td width="15%">2017.08.25</td>
+        <td>Add a Blog: <a href="/blog/mbp_extr_across_conditions" target="_blank">Extract Device Model Parameters
+            Across Geometry, Temperature and Voltage</a>
+
+        </td>
+    </tr>
+
+    <tr>
         <td width="15%">2017.08.24</td>
         <td>Add a PyRFS Example: <a href="/pyrfs/chap2.b5" target="_blank">Sid/Id^2 | Formula</a>
 
