--- a/templates/blog/blog_index.html
+++ b/templates/blog/blog_index.html
@@ -10,6 +10,27 @@ Blog
 
 <div class="container">
 
+    <div>
+        <div>
+            <a href="/blog/mbp_extr_across_conditions">
+                <div>
+                    <h4>Extract Device Model Parameters Across Geometry, Temperature and Voltage</h4>
+                    <h5>by Raj Sodhi[Keysight], Aug 25, 2017</h5>
+
+                </div>
+            </a>
+        </div>
+        <br/>
+        <div>
+            <img src="static/blog/mbp_extr_across_conditions/banner.png" width="180" alt="">
+        </div>
+
+
+        <hr/>
+    </div>
+
+
+
      <div>
         <div>
             <a href="/blog/mqa_pyrfs">
