--- a/templates/security/login_user.html
+++ b/templates/security/login_user.html
@@ -16,7 +16,7 @@ Login
         {{ render_field_with_errors(login_user_form.email, class="form-control") }}
         {{ render_field_with_errors(login_user_form.password, class="form-control") }}
         {{ render_field_with_errors(login_user_form.remember) }}
-        <a href="/requestlogin" target="_blank">Request a login.</a> <br/>
+        <a href="/requestlogin" target="_blank">Request a login or forget password</a> <br/>
         <label>By logging in, I agree to the <a href="/disclaimer" target="_blank">Terms of Use</a>.
         </label>
         {{ render_field(login_user_form.next) }}
