--- a/templates/index.html
+++ b/templates/index.html
@@ -55,10 +55,12 @@ Device Modeling Works
 
 <!-- Page Content -->
 <!--<div class="container" style="height: 160px; overflow: auto">-->
-<div class="container">
-    <h5><a href="/update_history" target="_blank">Update History</a></h5>
+<div class="container" style="height: 100px; overflow: hidden">
 
+    <h5><a href="/update_history" target="_blank">See Full Update History</a></h5>
     {% include 'updateHisCore.html' %}
+
+
 </div>
 
 </div>
