--- a/templates/pyrfs/toc.html
+++ b/templates/pyrfs/toc.html
@@ -22,6 +22,7 @@
         <li><a href="/pyrfs/chap2.b4">8. dsat Table | merge W L</a></li>
         <li><a href="/pyrfs/chap2.b5">9. Sid/Id^2 | Formula</a></li>
         <li><a href="/pyrfs/chap2.b6">10. Update Excel Template</a></li>
+        <li><a href="/pyrfs/chap2.b7">11. Hide Columns</a></li>
 
     </ul>
 
