--- a/templates/updateHisCore.html
+++ b/templates/updateHisCore.html
@@ -1,5 +1,10 @@
 <table width="100%">
     <tr>
+        <td width="15%">2017.09.08</td>
+        <td>Add a PyRFS Example: <a href="/pyrfs/chap2.b7" target="_blank">Hide Columns</a>
+        </td>
+    </tr>
+    <tr>
         <td width="15%">2017.09.07</td>
         <td>Enable Search Options, user can <font style="color:#8B0000">search by application category.</font>
         </td>
