--- a/templates/updateHisCore.html
+++ b/templates/updateHisCore.html
@@ -1,5 +1,15 @@
 <table width="100%">
     <tr>
+        <td width="15%">2017.09.13</td>
+        <td>Add a PyRFS Example: <a href="/pyrfs/chap2.c2" target="_blank">Multi-Sheets</a>
+        </td>
+    </tr>
+    <tr>
+        <td width="15%">2017.09.12</td>
+        <td>Add a PyRFS Example: <a href="/pyrfs/chap2.c1" target="_blank">Multi-Tables</a>
+        </td>
+    </tr>
+    <tr>
         <td width="15%">2017.09.08</td>
         <td>Add a PyRFS Example: <a href="/pyrfs/chap2.b7" target="_blank">Hide Columns</a>
         </td>
