--- a/templates/pyrfs/toc.html
+++ b/templates/pyrfs/toc.html
@@ -23,6 +23,8 @@
         <li><a href="/pyrfs/chap2.b5">9. Sid/Id^2 | Formula</a></li>
         <li><a href="/pyrfs/chap2.b6">10. Update Excel Template</a></li>
         <li><a href="/pyrfs/chap2.b7">11. Hide Columns</a></li>
+        <li><a href="/pyrfs/chap2.c1">12. Multi-Tables</a></li>
+        <li><a href="/pyrfs/chap2.c2">13. Multi-Sheets</a></li>
 
     </ul>
 
