--- a/templates/disclaimer.html
+++ b/templates/disclaimer.html
@@ -18,7 +18,12 @@ T's n C's
     HSPICE, FineSim are product names and registered trademarks of <a href="https://www.synopsys.com" target="_blank">SYNOPSYS</a>.
 
     <br/><br/>
-    SPECTRE, RelXpert are product names and registered trademarks of <a href="https://www.cadence.com/" target="_blank">Cadence</a>.
+    SPECTRE, RelXpert, PSpice are product names and registered trademarks of <a href="https://www.cadence.com/" target="_blank">Cadence</a>.
+
+    <br/><br/>
+    LTSpice is a product name and registered trademarks of <a href="http://www.linear.com/designtools/software/"
+                                                              target="_blank">Linear Technolgies</a>.
+
     <br/><br/>
     All example files used in this website are from or created based on these products's example/demo folder.
     <br/> <br/>
