--- a/templates/pyrfs/toc.html
+++ b/templates/pyrfs/toc.html
@@ -25,6 +25,7 @@
         <li><a href="/pyrfs/chap2.b7">11. Hide Columns</a></li>
         <li><a href="/pyrfs/chap2.c1">12. Multi-Tables</a></li>
         <li><a href="/pyrfs/chap2.c2">13. Multi-Sheets</a></li>
+        <li><a href="/pyrfs/chap2.d1">14. Scientific Notation</a></li>
 
     </ul>
 
