--- a/templates/updateHisCore.html
+++ b/templates/updateHisCore.html
@@ -1,5 +1,31 @@
 <table width="100%">
     <tr>
+        <td width="15%">2017.09.25</td>
+        <td>Add a MQA Rule: <a href="/mqarules/dibl" target="_blank">DIBL Example Rule | FinFET</a>
+        </td>
+    </tr>
+    <tr>
+        <td width="15%">2017.09.25</td>
+        <td>Add an ICCAP FAQ: <a href="/iccapfaq/link2ltspice" target="_blank">Link ICCAP to LTSpice</a>
+        </td>
+    </tr>
+    <tr>
+        <td width="15%">2017.09.24</td>
+        <td>Add an ICCAP FAQ: <a href="/iccapfaq/link2ext" target="_blank">Link ICCAP to External Simulators in
+            General</a>
+        </td>
+    </tr>
+    <tr>
+        <td width="15%">2017.09.15</td>
+        <td>Add a MBP FAQ: <a href="/mbpfaq/weff_leff" target="_blank">Effective Channel Length and Width</a>
+        </td>
+    </tr>
+    <tr>
+        <td width="15%">2017.09.14</td>
+        <td>Add a PyRFS Example: <a href="/pyrfs/chap2.d1" target="_blank">Format Numbers in Scientific Notation</a>
+        </td>
+    </tr>
+    <tr>
         <td width="15%">2017.09.13</td>
         <td>Add a PyRFS Example: <a href="/pyrfs/chap2.c2" target="_blank">Multi-Sheets</a>
         </td>
