improve the words in troubleshooting ICCAP simulation, link to external simulator in general.

--- a/templates/faq/iccap/link2externalsim.html
+++ b/templates/faq/iccap/link2externalsim.html
@@ -74,9 +74,14 @@ Should you encounter any problem, please try the following, usually we can figur
     </li>
     <br/>
 
-    <li>Turn on the Simulation Debugger window, and check the netlist and LTSpice output log.
+    <li>Further, turn on the Simulation Debugger window, and check the netlist created by ICCAP and Simulator's output files.
         <br/>
-        <img src="/static/faq/iccap/link2ltspice/debugger.png" alt="Image"/>
+        <img src="/static/faq/iccap/link2ltspice/debugger.png" alt="Image"/><br/>
+        <em>
+            Note: It's recommended to close the Simulation Debugger window once the problem is addressed. Leaving it
+            open will slow down the overall simulation speed because of additional
+            input/output interaction.
+        </em>
 
     </li>
 </ol>
