--- a/templates/mqarules/toc.html
+++ b/templates/mqarules/toc.html
@@ -14,6 +14,7 @@
     <h5><a href="/mqarules/misR">Mismatch R | Hspice</a></h5>
     <h5><a href="/mqarules/wpe">WPE Rule</a></h5>
     <h5><a href="/mqarules/fn_spe_finfet">1/f Noise | FinFET | Spectre</a></h5>
+    <h5><a href="/mqarules/dibl">DIBL Example Rule | FinFET</a></h5>
 
     <br/><br/><br/><br/><br/>
 
