--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -25,6 +25,11 @@ Dashboard
     Company Count: <font size="6"> {{company_ct}}</font><br/>
     Total View #:<font size="6"> {{totalViewCount}}</font>
 
+    <h3><a href="/page_view_his" target="_blank">Page View History</a></h3>
+    <hr/>
+    <h3><a href="/edit_post_entry" target="_blank">Edit a Post</a></h3>
+    <hr/>
+
     <br/><br/>
     <div style="height:530px">
         <!--style="float:left; width: 0%; margin-right:5px;border-right-width:1px;border-right-style:solid; border-right-color: #D3D3D3"-->
@@ -41,7 +46,7 @@ Dashboard
                     <td width="10%">{{p[2]}}</td>
                     <td width="20%">
                         {% if getPostIdFunc(p[0])>0 %}
-                        <a href="/viewerListFor/{{getPostIdFunc(p[0])}}" target="_blank">Viewers</a>
+                        <a href="/viewerListFor{{p[0]}}" target="_blank">Viewers</a>
                     </td>
 
                     {% endif %}
