add link ICCAP to ADS

--- a/templates/faq/iccap/link2externalsim.html
+++ b/templates/faq/iccap/link2externalsim.html
@@ -74,11 +74,13 @@ Should you encounter any problem, please try the following, usually we can figur
     </li>
     <br/>
 
-    <li>Further, turn on the Simulation Debugger window, and check the netlist created by ICCAP and Simulator's output files.
+    <li>Further, turn on the Simulation Debugger window, and check the netlist created by ICCAP and Simulator's output
+        files.
         <br/>
-        <img src="/static/faq/iccap/link2ltspice/debugger.png" alt="Image"/><br/>
+        <img src="/static/faq/iccap/link2ltspice/debugger.png" alt="Image"/><br/><br/>
         <em>
-            Note: It's recommended to close the Simulation Debugger window once the problem is addressed. Leaving it
+            Note: It's recommended to <font style="color:red">close the Simulation Debugger window</font> once the
+            problem is addressed. Leaving it
             open will slow down the overall simulation speed because of additional
             input/output interaction.
         </em>
