--- a/templates/updateHisCore.html
+++ b/templates/updateHisCore.html
@@ -1,5 +1,12 @@
 <table width="100%">
     <tr>
+        <td width="15%">2017.09.27</td>
+        <td>Add an ICCAP FAQ: <a href="/iccapfaq/link2ads" target="_blank">Link ICCAP to ADS Simulator</a>
+        </td>
+    </tr>
+
+
+    <tr>
         <td width="15%">2017.09.25</td>
         <td>Add a MQA Rule: <a href="/mqarules/dibl" target="_blank">DIBL Example Rule | FinFET</a>
         </td>
