--- a/templates/updateHisCore.html
+++ b/templates/updateHisCore.html
@@ -1,4 +1,16 @@
 <table width="100%">
+
+     <tr>
+        <td width="15%">2017.09.27</td>
+        <td>Add an ICCAP FAQ: <a href="/iccapfaq/link2hspice" target="_blank">Link ICCAP to HSpice Simulator</a>
+        </td>
+    </tr>
+
+    <tr>
+        <td width="15%">2017.09.27</td>
+        <td>Add an ICCAP FAQ: <a href="/iccapfaq/link2spectre" target="_blank">Link ICCAP to Spectre Simulator</a>
+        </td>
+    </tr>
     <tr>
         <td width="15%">2017.09.27</td>
         <td>Add an ICCAP FAQ: <a href="/iccapfaq/link2ads" target="_blank">Link ICCAP to ADS Simulator</a>
