add link ICCAP to pspice, spice2/3/hpsice

--- a/templates/faq/iccap/link2hspice.html
+++ b/templates/faq/iccap/link2hspice.html
@@ -35,7 +35,7 @@ Note: It's recommended to read the <a href="/iccapfaq/link2ext" target="_blank">
     <li>
         <p>Run a simulation and confirm that the simulated data appears on the ‘idvsvg’ plot, as shown below:</p>
         <p><img src="/static/faq/iccap/link2ltspice/hspice_plot.png" alt="Image"/></p>
-        <p><em>Note: the simulatioin data are solid lines on the plot.</em></p>
+        <p><em>Note: the simulation data are solid lines on the plot.</em></p>
     </li>
 </ol>
 <br/>
