--- a/templates/faq/iccap/link2ltspice.html
+++ b/templates/faq/iccap/link2ltspice.html
@@ -74,7 +74,7 @@ It's recommended to read the <a href="/iccapfaq/link2ext" target="_blank">Link I
     <li>
         <p>Open the /large/idvg/idvsvg plot, confirm that the simulated data appears.</p>
         <p><img src="/static/faq/iccap/link2ltspice/ltspice_plot.png" alt="Image"/></p>
-        <p><em>Note: the simulatioin data are solid lines on the plot.</em></p>
+        <p><em>Note: the simulation data are solid lines on the plot.</em></p>
     </li>
 </ol>
 
