--- a/templates/updateHisCore.html
+++ b/templates/updateHisCore.html
@@ -1,6 +1,15 @@
 <table width="100%">
-
      <tr>
+        <td width="15%">2017.09.27</td>
+        <td>Add an ICCAP FAQ: <a href="/iccapfaq/link2pspice" target="_blank">Link ICCAP to PSpice Simulator</a>
+        </td>
+    </tr>
+    <tr>
+        <td width="15%">2017.09.27</td>
+        <td>Add an ICCAP FAQ: <a href="/iccapfaq/link2spice3" target="_blank">Link ICCAP to Spice2, Spice3, HPSpice</a>
+        </td>
+    </tr>
+    <tr>
         <td width="15%">2017.09.27</td>
         <td>Add an ICCAP FAQ: <a href="/iccapfaq/link2hspice" target="_blank">Link ICCAP to HSpice Simulator</a>
         </td>
