--- a/templates/faq/iccap/link2spectre.html
+++ b/templates/faq/iccap/link2spectre.html
@@ -59,7 +59,7 @@ $CDS_INST_DIR/tools.lnx86/bin/spectre $*
     <li>
         <p>Run a simulation and confirm that the simulated data appears on the ‘ibicvsve’ plot, as shown below:</p>
         <p><img src="/static/faq/iccap/link2ltspice/spectre_plot.png" alt="Image"/></p>
-        <p><em>Note: the simulatioin data are solid lines on the plot.</em></p>
+        <p><em>Note: the simulation data are solid lines on the plot.</em></p>
     </li>
 </ol>
 <br/><br/>
