add link mqa rule, cgs cgd continueity across zero vds

--- a/templates/blog/blog_index.html
+++ b/templates/blog/blog_index.html
@@ -10,6 +10,46 @@ Blog
 
 <div class="container">
 
+     <div>
+        <div>
+            <a href="/blog/iccap_ltspice">
+                <div>
+                    <h4>Link IC-CAP to the LTspice Simulator</h4>
+                    <h5>by Raj Sodhi[Keysight], Oct 2, 2017</h5>
+
+                </div>
+            </a>
+        </div>
+        <br/>
+        <div>
+            <img src="static/blog/iccap_ltspice/banner.jpg" width="180" alt="">
+        </div>
+
+
+        <hr/>
+    </div>
+
+
+    <div>
+        <div>
+            <a href="/blog/iccap_ext_simulators">
+                <div>
+                    <h4>Link the IC-CAP Modeling Tool to External Simulators</h4>
+                    <h5>by Raj Sodhi[Keysight], Sept 27, 2017</h5>
+
+                </div>
+            </a>
+        </div>
+        <br/>
+        <div>
+            <img src="static/blog/iccap_ext_simulators/2.png" width="180" alt="">
+        </div>
+
+
+        <hr/>
+    </div>
+
+
     <div>
         <div>
             <a href="/blog/mbp_extr_across_conditions">
