--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -21,16 +21,16 @@ Dashboard
     Video Demos <font size="6"> {{video_ct}}</font>
     <br/>
     User Count: <font size="6"> {{user_ct}}</font> ---- Search Count: <font size="6"> {{search_ct}}</font>
+    &nbsp;&nbsp;&nbsp;&nbsp;
+    Company Count: <font size="6"> {{company_ct}}</font> &nbsp;&nbsp;&nbsp;&nbsp; Total View #:<font size="6">
+    {{totalViewCount}}</font>
+
     <br/>
-    Company Count: <font size="6"> {{company_ct}}</font><br/>
-    Total View #:<font size="6"> {{totalViewCount}}</font>
-
-    <h3><a href="/page_view_his" target="_blank">Page View History</a></h3>
-    <hr/>
-    <h3><a href="/edit_post_entry" target="_blank">Edit a Post</a></h3>
+    <font size="5"> <a href="/page_view_his" target="_blank">Page View History</a></font>&nbsp;&nbsp;&nbsp;&nbsp;
+    <font size="5"><a href="/edit_post_entry" target="_blank">Edit a Post</a></font>
     <hr/>
 
-    <br/><br/>
+    <br/>
     <div style="height:530px">
         <!--style="float:left; width: 0%; margin-right:5px;border-right-width:1px;border-right-style:solid; border-right-color: #D3D3D3"-->
         <div>
