--- a/templates/updateHisCore.html
+++ b/templates/updateHisCore.html
@@ -1,5 +1,32 @@
 <table width="100%">
-     <tr>
+
+    <tr>
+        <td width="15%">2017.10.20</td>
+        <td>Add a MQA Rule: <a href="/mqarules/cgscgd" target="_blank">Cgs Cgd Continuity across Zero Vds</a>
+        </td>
+    </tr>
+    <tr>
+        <td width="15%">2017.10.18</td>
+        <td>Add a Blog: <a href="/blog/iccap_ltspice" target="_blank">Link IC-CAP to the LTspice Simulator</a>
+        </td>
+    </tr>
+    <tr>
+        <td width="15%">2017.10.17</td>
+        <td>Add a Blog: <a href="/blog/iccap_ext_simulators" target="_blank">Link the IC-CAP Modeling Tool to External
+            Simulators</a>
+        </td>
+    </tr>
+    <tr>
+        <td width="15%">2017.10.04</td>
+        <td>Add a MBP FAQ: <a href="/mbpfaq/site_die" target="_blank">Enable Die and Site Indices from Measurement</a>
+        </td>
+    </tr>
+    <tr>
+        <td width="15%">2017.10.02</td>
+        <td>Add a MBP FAQ: <a href="/mbpfaq/unused_param" target="_blank">Turn on Unused Model Parameters</a>
+        </td>
+    </tr>
+    <tr>
         <td width="15%">2017.09.27</td>
         <td>Add an ICCAP FAQ: <a href="/iccapfaq/link2pspice" target="_blank">Link ICCAP to PSpice Simulator</a>
         </td>
