--- a/templates/mqarules/toc.html
+++ b/templates/mqarules/toc.html
@@ -15,6 +15,7 @@
     <h5><a href="/mqarules/wpe">WPE Rule</a></h5>
     <h5><a href="/mqarules/fn_spe_finfet">1/f Noise | FinFET | Spectre</a></h5>
     <h5><a href="/mqarules/dibl">DIBL Example Rule | FinFET</a></h5>
+    <h5><a href="/mqarules/cgscgd">Cgs Cgd Continuity across Zero Vds</a></h5>
 
     <br/><br/><br/><br/><br/>
 
