add link mqa rule, cgs cgd continueity across zero vds

--- a/templates/mqarules/rules/cgscgd.html
+++ b/templates/mqarules/rules/cgscgd.html
@@ -16,7 +16,7 @@ Behold, X-man is back!  Wait a minute… that means the dark evil comes back, to
 <br/><img src="/static/mqarules/cgscgd/0.png" border="1px"><br/><br/>
 
 Alright, quit joking, we are talking about the Cgs and Cgd continuity across zero Vds in this note.<br/><br/>
-An MQA rule is exampled here to scan Cgs and Cds vs Vds ranging from negative to positive, at a dense step, say 5mV.
+An MQA rule is exampled here to scan Cgs and Cds vs Vds ranging from negative to positive, at a dense step, say 5mV. And, the Vgs=1.2V is applied to have this transistor turned on.
 <br/><br/>
 We compared a BSIM3, a BSIM4 and BSIM-BULK(previously called BSIM6) model, as follows:
 
