--- a/templates/mqarules/toc.html
+++ b/templates/mqarules/toc.html
@@ -16,7 +16,9 @@
     <h5><a href="/mqarules/fn_spe_finfet">1/f Noise | FinFET | Spectre</a></h5>
     <h5><a href="/mqarules/dibl">DIBL Example Rule | FinFET</a></h5>
     <h5><a href="/mqarules/cgscgd">Cgs Cgd Continuity across Zero Vds</a></h5>
-
+    <h5><a href="/mqarules/cxy">Explore Multi Capacitances of a Transistor</a></h5>
+    <h5><a href="/mqarules/crss_ciss_coss">Crss, Ciss, Coss</a></h5>
+    <h5><a href="/mqarules/misHspMos_finfet">Mismatch FinFET | Hspice</a></h5>
     <br/><br/><br/><br/><br/>
 
 
