--- a/templates/requestlogin.html
+++ b/templates/requestlogin.html
@@ -13,7 +13,14 @@ Request Login
 
     <h3>Request a login or forget password</h3>
     <hr/>
-    The logins are created for licensed Keysight users only, please contact your local Keysight representative for a
+
+    Dear friends, all the <a href="/blog" target="_self">Blog articles</a> are open to public; however, most other
+    contents on this website require a
+    login.
+
+    <br/><br/>
+
+    The logins are created for licensed Keysight users and evaluation users only, please contact your local Keysight representative for a
     login, as well as for retrieving the password.
 
     <br/><br/>
