--- a/templates/updateHisCore.html
+++ b/templates/updateHisCore.html
@@ -1,6 +1,23 @@
 <table width="100%">
 
     <tr>
+        <td width="15%">2017.10.30</td>
+        <td>Add a MQA Rule: <a href="/mqarules/misHspMos_finfet" target="_blank">Mismatch Rule - FinFET - Hspice</a>
+        </td>
+    </tr>
+
+    <tr>
+        <td width="15%">2017.10.24</td>
+        <td>Add a MQA Rule: <a href="/mqarules/crss_ciss_coss" target="_blank">Crss, Ciss, Coss for Power MOSFET</a>
+        </td>
+    </tr>
+    <tr>
+        <td width="15%">2017.10.23</td>
+        <td>Add a MQA Rule: <a href="/mqarules/cxy" target="_blank">Explore Multi Capacitances of a Transistor</a>
+        </td>
+    </tr>
+
+    <tr>
         <td width="15%">2017.10.20</td>
         <td>Add a MQA Rule: <a href="/mqarules/cgscgd" target="_blank">Cgs Cgd Continuity across Zero Vds</a>
         </td>
