add link mqa rule, cgs cgd continueity across zero vds

--- a/templates/mqarules/mqarules_index.html
+++ b/templates/mqarules/mqarules_index.html
@@ -15,12 +15,10 @@ MQA Rules
     <div style="float:center; height:1400px; overflow: auto">
         <br/>
         {% block mqarulesmain %}
-        <h3>Please pick a Rule Example from the left, or Search.</h3>
+        <h3>How to Use Example Rules in General</h3>
         <hr/>
-        <br/>
-        <h4>How to Use Example Rules in General</h4>
-        <hr/>
-        Examples Rules can be saved as .rule files and plug into your other MQA projects; we also need to create a rule.index file
+        Examples Rules can be saved as .rule files and plug into your other MQA projects; we also need to create a
+        rule.index file
         to
         include new rule file(s), or add them into your existing rule.index file. As illustrated below:
         <br/><br/>
