--- a/templates/mqarules/toc.html
+++ b/templates/mqarules/toc.html
@@ -1,6 +1,8 @@
 <br/>
 
 <div>
+    <h5><a href="/mqarules">How to use MQA Rule</a></h5>
+    <hr/>
     <h5><a href="/mqarules/ft">Ft</a></h5>
     <h5><a href="/mqarules/fmax">Fmax</a></h5>
     <h5><a href="/mqarules/vth_finfet">Vth_con for FinFET</a></h5>
