add iccap python s parameter , Q and L

--- a/templates/about.html
+++ b/templates/about.html
@@ -11,7 +11,9 @@ About
     <h3>About this Site</h3>
     <hr/>
 
-    This site aims to provide <font style="color:red">ADDITIONAL</font> application notes, best practice, and FAQs, etc material for Keysight end-to-end
+    Acknowledged by <a href="http://mos-ak.org" target="_blank">MOS-AK.org</a>, this site aims to provide <font
+        style="color:red">ADDITIONAL</font> application notes, best practice, and FAQs, etc material for Keysight
+    end-to-end
     Device Modeling
     solution, including:
     <ul>
