--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@ Device Modeling Works
                                     style="color:white">Blog</font></a>
                         </li>
                         <li>
-                            <a href="/mbpst" class="btn btn-default btn-lg">MBP S<sup>{{mbpstCt}}</sup></a>
+                            <a href="/mbpst" class="btn btn-default btn-lg">MBP <sub>Script</sub><sup>{{mbpstCt}}</sup></a>
                         </li>
                         <li>
                             <a href="/video" class="btn btn-default btn-lg">Videos <sup>{{videoCt}}</sup></a>
@@ -57,7 +57,7 @@ Device Modeling Works
 <!--<div class="container" style="height: 160px; overflow: auto">-->
 <div class="container" style="height: 100px; overflow: hidden">
 
-    <h5><a href="/update_history" target="_blank">Full Update History</a> </h5>
+    <h5><a href="/update_history" target="_blank">Full Update History</a></h5>
     {% include 'updateHisCore.html' %}
 
 
