--- a/templates/mqarules/mqarules_index.html
+++ b/templates/mqarules/mqarules_index.html
@@ -17,7 +17,7 @@ MQA Rules
         {% block mqarulesmain %}
         <h3>How to Use Example Rules in General</h3>
         <hr/>
-        Examples Rules can be saved as .rule files and plug into your other MQA projects; we also need to create a
+        Examples Rules can be saved as .rule files and plugged into your other MQA projects; we also need to create a
         rule.index file
         to
         include new rule file(s), or add them into your existing rule.index file. As illustrated below:
