--- a/templates/mqarules/toc.html
+++ b/templates/mqarules/toc.html
@@ -3,6 +3,8 @@
 <div>
     <h5><a href="/mqarules">How to use MQA Rule</a></h5>
     <hr/>
+    <h5><a href="/mqarules/meas_qa">QA with Measurement</a></h5>
+    <hr/>
     <h5><a href="/mqarules/ft">Ft</a></h5>
     <h5><a href="/mqarules/fmax">Fmax</a></h5>
     <h5><a href="/mqarules/vth_finfet">Vth_con for FinFET</a></h5>
@@ -21,6 +23,7 @@
     <h5><a href="/mqarules/cxy">Explore Multi Capacitances of a Transistor</a></h5>
     <h5><a href="/mqarules/crss_ciss_coss">Crss, Ciss, Coss</a></h5>
     <h5><a href="/mqarules/misHspMos_finfet">Mismatch FinFET | Hspice</a></h5>
+
     <br/><br/><br/><br/><br/>
 
 
