--- a/templates/updateHisCore.html
+++ b/templates/updateHisCore.html
@@ -1,4 +1,43 @@
 <table width="100%">
+    <tr>
+        <td width="15%">2017.11.27</td>
+        <td>Add an ICCAP Blog: <a href="/blog/iccap_python_s_par" target="_blank">Use Python to process S Parameter in
+            ICCAP</a>
+        </td>
+    </tr>
+    <tr>
+        <td width="15%">2017.11.08</td>
+        <td>Add a MQA FAQ: <a href="/mqafaq/meas_misc1" target="_blank">QA with Measurement - Misc 1</a>
+        </td>
+    </tr>
+    <tr>
+        <td width="15%">2017.11.07</td>
+        <td>Add a MQA FAQ: <a href="/mqafaq/meas4" target="_blank">QA with Measurement - 4/4</a>
+        </td>
+    </tr>
+
+    <tr>
+        <td width="15%">2017.11.07</td>
+        <td>Add a MQA FAQ: <a href="/mqafaq/meas3" target="_blank">QA with Measurement - 3/4</a>
+        </td>
+    </tr>
+
+    <tr>
+        <td width="15%">2017.11.07</td>
+        <td>Add a MQA FAQ: <a href="/mqafaq/meas2" target="_blank">QA with Measurement - 2/4</a>
+        </td>
+    </tr>
+    <tr>
+        <td width="15%">2017.11.07</td>
+        <td>Add a MQA FAQ: <a href="/mqafaq/meas1" target="_blank">QA with Measurement - 1/4</a>
+        </td>
+    </tr>
+
+    <tr>
+        <td width="15%">2017.11.06</td>
+        <td>Add a MQA FAQ: <a href="/mqafaq/instNameMapping" target="_blank">Device Instance Name Mapping</a>
+        </td>
+    </tr>
 
     <tr>
         <td width="15%">2017.10.30</td>
