--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -49,6 +49,7 @@
 
 
 
+
     </script>
 
 </head>
@@ -75,6 +76,7 @@
                 {% endif %}
             </a>
 
+
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -91,7 +93,7 @@
                     <a href="/blog"><font style="color:#B22222">Blog</font></a>
                 </li>
                 <li>
-                    <a href="/mbpst">MBP S</a>
+                    <a href="/mbpst">MBP <sub>Script</sub></a>
                 </li>
                 <li>
                     <a href="/video">Videos</a>
@@ -151,7 +153,7 @@
 
 <!-- Bootstrap Core JavaScript -->
 <script src="/static/js/bootstrap.min.js"></script>
- {% block script %}{% endblock %}
+{% block script %}{% endblock %}
 
 </body>
 
